deleted hindi fluent

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                                     <span>Languages</span>
                                 </div>
                                 <p>
-                                    <span>: Bengali(Native), English(Fluent), Chinese(Basic Conversation), Hindi(Fluent)</span>
+                                    <span>: Bengali(Native), English(Fluent), Chinese(Basic Conversation)</span>
                                 </p>
                             </div>
                         </div>
